# dfflow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
dfflow/: __init__.py  cleaning.py  decorators.py  flow.py  logger.py  profile.py  utils.py
examples/: basic_info_logging.py  debug_logging.py  json_logging_example.py  log.json  pipeline_with_levels.py  profiling_example.py
tests/: test_cleaning.py  test_flow.py  test_logger.py  test_profile.py
